--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 <h1 align="center">个税计算器</h1>
+<a href="http://zccbbg.top"><h5 align="center">欢迎访问：橙子博客</h5></a>
 <hr>
-<h2 align="center">请输入</h2>
 <div ng-controller='PersonalIncomeTaxController' class='main'>
     <div id="history_wrap">
         <div id="part1">
