--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <label style="font-size: large">请核对五险一金缴费比例(视具体地方政策而定，个人比例一般在20%左右)：</label>
                 <table class="table table-striped">
                     <thead>
-                    <th>缴费项目</th>
-                    <th>缴纳五险一金比例</th>
+                    <th width="50%">缴费项目</th>
+                    <th width="50%">缴纳五险一金比例</th>
                     </thead>
                     <tbody>
                     <tr ng-repeat='mingxi in pit.mingxis'>
