--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                         <tr><td>税后工资</td><td><input class="shebaogongjijin" ng-model='pit.shuihou' disabled="disabled"></td></tr>
                     </tbody>
                 </table>
+                <input style="width: 100%" class="shebaogongjijin" ng-model='pit.desc' disabled="disabled">
             </div>
 
             <hr>
